--- a/templates/query_class.html
+++ b/templates/query_class.html
@@ -53,10 +53,10 @@ function searchSel() {
     <div id="space"></div>
     </td>
   </tr>
-
-<tr>
-    <td><span>學年度： </span><select id="yms_yms" name="yms_yms" size="1" class="text11"><option value="104#1">104學年度第1學期</option><option value="103#1">103學年度第1學期</option><option value="103#2" selected="">103學年度第2學期</option><option value="103#4">103學年度暑修</option><option value="103#5">103學年度先修學期</option><option value="102#1">102學年度第1學期</option><option value="102#2">102學年度第2學期</option><option value="102#4">102學年度暑修</option><option value="101#1">101學年度第1學期</option><option value="101#2">101學年度第2學期</option><option value="101#3">101學年度寒修</option><option value="101#4">101學年度暑修</option><option value="100#1">100學年度第1學期</option><option value="100#2">100學年度第2學期</option><option value="100#3">100學年度寒修</option><option value="100#4">100學年度暑修</option><option value="99#1">99學年度第1學期</option><option value="99#2">99學年度第2學期</option><option value="99#3">99學年度寒修</option><option value="99#4">99學年度暑修</option><option value="98#1">98學年度第1學期</option><option value="98#2">98學年度第2學期</option><option value="98#3">98學年度寒修</option><option value="98#4">98學年度暑修</option><option value="97#1">97學年度第1學期</option><option value="97#2">97學年度第2學期</option><option value="97#3">97學年度寒修</option><option value="97#4">97學年度暑修</option><option value="96#1">96學年度第1學期</option><option value="96#2">96學年度第2學期</option><option value="96#3">96學年度寒修</option><option value="96#4">96學年度暑修</option><option value="95#1">95學年度第1學期</option><option value="95#2">95學年度第2學期</option><option value="94#1">94學年度第1學期</option><option value="94#2">94學年度第2學期</option><option value="93#1">93學年度第1學期</option><option value="93#2">93學年度第2學期</option><option value="92#1">92學年度第1學期</option><option value="92#2">92學年度第2學期</option></select></td><br/>
-  <td><center><span>系別年級 </span>
+  <td><center>
+    <span>學年度： </span>
+    <select id="yms_yms" name="yms_yms" size="1" class="text11"><option value="104#1">104學年度第1學期</option><option value="103#1">103學年度第1學期</option><option value="103#2" selected="">103學年度第2學期</option><option value="103#4">103學年度暑修</option><option value="103#5">103學年度先修學期</option><option value="102#1">102學年度第1學期</option><option value="102#2">102學年度第2學期</option><option value="102#4">102學年度暑修</option><option value="101#1">101學年度第1學期</option><option value="101#2">101學年度第2學期</option><option value="101#3">101學年度寒修</option><option value="101#4">101學年度暑修</option><option value="100#1">100學年度第1學期</option><option value="100#2">100學年度第2學期</option><option value="100#3">100學年度寒修</option><option value="100#4">100學年度暑修</option><option value="99#1">99學年度第1學期</option><option value="99#2">99學年度第2學期</option><option value="99#3">99學年度寒修</option><option value="99#4">99學年度暑修</option><option value="98#1">98學年度第1學期</option><option value="98#2">98學年度第2學期</option><option value="98#3">98學年度寒修</option><option value="98#4">98學年度暑修</option><option value="97#1">97學年度第1學期</option><option value="97#2">97學年度第2學期</option><option value="97#3">97學年度寒修</option><option value="97#4">97學年度暑修</option><option value="96#1">96學年度第1學期</option><option value="96#2">96學年度第2學期</option><option value="96#3">96學年度寒修</option><option value="96#4">96學年度暑修</option><option value="95#1">95學年度第1學期</option><option value="95#2">95學年度第2學期</option><option value="94#1">94學年度第1學期</option><option value="94#2">94學年度第2學期</option><option value="93#1">93學年度第1學期</option><option value="93#2">93學年度第2學期</option><option value="92#1">92學年度第1學期</option><option value="92#2">92學年度第2學期</option></select>
+    <span>系別年級 </span>
     <select name="class_id" id="class_id">
 
   <option value="UC021411">四會一甲</option>
@@ -744,7 +744,7 @@ function searchSel() {
     $.post("/ap/query_class",
            {
             'class_id': $("#class_id").val(),
-            'yms_yms': $("yms_yms").val(),
+            'yms_yms': $("#yms_yms").val(),
             'unit_serch': '查 詢'
            },
            function(data){
