--- a/templates/query.html
+++ b/templates/query.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<link href="../static/bootstrap.css" rel="stylesheet" media="screen">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <title></title>
 
@@ -67,8 +67,34 @@ function searchSel() {
             'unit_serch': '查 詢'
            },
            function(data){
-            $(".result").eq(0).html(data);
-           }
-          );
+            tables = "<table border='1' align='center' class='table table-striped table-bordered table-hover table-condensed'>";
+            tables += "     \
+              <tr >          \
+                <td width='2%'>\\</td> \
+                <td width='6%'>一</td>  \
+                <td width='6%'>二</td>  \
+                <td width='6%'>三</td>  \
+                <td width='6%'>四</td>  \
+                <td width='6%'>五</td>  \
+                <td width='6%'>六</td>  \
+                <td width='6%'>日</td>  \
+              </tr>           \
+            ";
+            for(c in data){
+              tables += "<tr>"
+              tables += "<td>" + data[c].time + "</td>"
+              for(info in data[c]){
+                if(info == 'time') break;
+                tables += "<td>";
+                for(key in data[c][info]){
+                  tables += data[c][info][key] + "<br/>"
+                }
+                tables += "</td>";
+              }
+              tables += "</tr>";
+            }
+            tables += "</table>";
+            $(".result").eq(0).html(tables);
+           }, 'json');
   })
 </script>
