--- a/templates/query_teacher.html
+++ b/templates/query_teacher.html
@@ -24,32 +24,15 @@
 
   </style>
 <body class="sbody" oncontextmenu="of_setcontextmenu()">
-<SCRIPT type="text/javascript">
-function searchSel() {
-  var input=document.getElementById('realtxt').value;
-  var output=document.getElementById('class_id').options;
-  // console.log(output);
-  for(var i=0;i<output.length;i++) {
-    if(output[i].innerText.indexOf(input)!=-1){
-      output[i].selected="selected";
-    }
-    if(document.getElementById('realtxt').value==''){
-      output[0].selected="selected";
-    }
-  }
-}
-</SCRIPT>
-
-
-
-
-
-
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<link rel="stylesheet" type="text/css" href="js/jquery.autocomplete.css"/>
+<script type="text/javascript" src="js/jquery.autocomplete.pack.js"></script>
+<script type="text/javascript" src="js/jquery.autocomplete.js"></script>
 
 <td colspan="5"><center><font size="5">教師課表查詢</font></center></td></tr>
 <form name="thisform" action="query" method="post"><table align="center"><tbody><tr>
   <tr>
-    <td><span>快速查詢  </span><input type="http://127.0.0.1:5000/ap/query" id="realtxt" onkeyup="searchSel()" align="center">
+    <td><span>快速查詢  </span><input type="http://127.0.0.1:5000/ap/query" id="realtxt" align="center">
     <div id="space"></div>
     </td>
   </tr>
@@ -797,6 +780,15 @@ function searchSel() {
   <hr>
 
 <div class='result'></div>
+
+
+<script type="text/javascript">
+  $(function(){       
+  var data = ['張金鑫', '黃國恩', '黃清良', '熊彬成', '莊一仁', '魯子青', '李泓原', '劉宗智', '簡世文', '李建祥', '陳國峰', '薛明憲', '林昭文', '洪上超', '李孝貽', '鄭宗杰', '蕭淳元', '陳世豪', '楊孟翰', '何睦美', '王迪新', '趙芊逸', '莊苑仙', '黃文玲', '簡美瑟', '林素幸', '戴貞德', '陳儀蓉', '張添香', '黃佳純', '鄭弘琦', '謝文瑜', '鍾承柔', '伊柏', '曾衍彰', '林明昭', '葛世偉', '夏冠群', '李洙德', '林恆勝', '朱培宏', '龐大成', '傅德麟', '何信宗', '蕭小軍', '李仁棻', '潘慧如', '施泊\ue107', '李仁耀', '陳志賢', '林豐瑞', '徐中華', '陳樹人', '郭德惠', '張啟陽', '陳敬寬', '徐晉元', '王柏煒', '李明章', '張國恩', '葉增雄', '盧用章', '吳坤德', '羅智聰', '吳忠信', '周肇基', '蕭國鴻', '呂怡緯', '林亮宏', '方得華', '陸緯庭', '陳進祥', '郭俊賢', '張炎生', '郭東義', '郭旭東', '蔡叔翹', '傅振瑞', '閔庭祥', '楊書濠', '吳政憲', '李俊宏', '張厚起', '傅昭睿', '徐良維', '鄭瑞川', '葉建廷', '林敬斌', '鄭克強', '蘇育民', '張祥麟', '陳道星', '夏艷文', '郝思屏', '陳秀鳳', '盧瑞琴', '林雅萍', '洪麗琴', '杜佾倢', '蔡靖文', '施伊凡', '翁鶯娟', '林雅敏', '曾玉琦', '吳蕙礽', '張嘉倩', '李依齡', '陳心怡', '龔千芬', '陳達希', '史進得', '歐朝雄', '黃崇仁', '游仁良', '黃文祥', '鄭宗慶', '王宏源', '詹正義', '吳思達', '許昭和', '程覺敏', '呂祖尚', '余光雄', '陳武勳', '林水達', '謝達華', '謝煜生', '陳和瑞', '林壽華', '王乾勇', '洪東煒', '蔡長清', '成台生', '陳邦權', '陳榮方', '鄭義超', '張銘峰', '劉安球', '林輝鐸', '廖世謨', '王和芳', '郭進春', '鄭文義', '陳茂盛', '陳永安', '李來福', '吳鴻源', '陳永賢', '謝勝治', '李立', '張凱軍', '柯永森', '陸象君', '潘煌鍟', '蕭達鴻', '周至宏', '鄭舜仁', '林文寶', '薛舜仁', '謝明昌', '林銘福', '吳杉堯', '王昱鈞', '連志原', '王懷毅', '黃建榮', '陳光華', '蔡政男', '林宗輝', '潘建源', '蔡明章', '邱彬舜', '黃立璋', '謝濬澤', '洪嘉榮', '胡德中', '蕭大正', '周正寅', '孫志誠', '蘇明鴻', '蔡昭民', '柯德宏', '彭正中', '李建慧', '杜正宇', '曲有明', '徐智明', '李財福', '黃煥民', '黃義俊', '葉俊賢', '粘忠倚', '王銘揚', '林嘉宏', '李力昌', '張俊陽', '胡禎麟', '洪盟峯', '王鴻猷', '吳得智', '洪明宏', '蔡進金', '廖繼稔', '蔡平賜', '張家源', '鄭文助', '卓明遠', '林靖傑', '阮昭欽', '何\ue09f森', '洪文平', '王冠智', '陳榮進', '陳文輝', '謝文川', '莊占鰲', '陳正山', '歐振福', '潘昭宏', '李一民', '王柏淵', '王國源', '陳炫佑', '郭勝煌', '李文智', '林永昌', '龍裕鴻', '蕭純育', '陳明瑤', '沈如鵬', '張振亞', '顏福杉', '林慶揚', '翟治平', '戴學斌', '陳政初', '康瑞亨', '楊志雄', '張高華', '潘天賜', '林文祥', '張健桂', '林阿德', '謝坤民', '高立衡', '龔大喜', '陳錦泰', '王敬文', '林建宇', '韓慧林', '吳南吉', '郭玉麟', '葉晉嘉', '陳信智', '張桂豪', '李建良', '陳明聖', '許育瑞', '江柏叡', '葉松瑋', '陳克豪', '王志強', '蔡秉叡', '朱紹儀', '郝沛毅', '陳育民', '江哲超', '陳亮志', '蔡博任', '歐士輔', '許震宇', '黃志億', '劉襄', '戴春惠', '呂明秀', '陳秀香', '林秀香', '洪素香', '林黃淑化', '曾麗弘', '謝淑旦', '蕭麗娟', '高慧霞', '陳燕慧', '張純萍', '黃淑心', '吳芬蘭', '高麗芬', '謝淑媚', '黃瓊慧（人力資源發展系碩士班）', '陳桂市', '郭淑惠', '陳秋燕', '曾雪蓮', '湯妮莉', '張蘭心', '林昭伶', '翁珮洧', '王淑雱', '紀宜廷', '李慧君', '王佩玲', '黃郁玲', '鄭文文', '許瓊文', '陳怡如', '陳媛玲', '徐儷娜', '馮淑玉', '孫碧霞', '蔡美娜', '林建寧', '歐素雯', '姚惠芬', '王雪如', '謝春馨', '楊敏里', '呂瑞芳', '黃國芬', '田絢綺', '林秉敏', '徐惠英', '毛贊琇', '蔡依瑩', '鐘文鈺', '洪明君', '黃靖婷', '蘇琬婷', '許惠慈', '曾稚玹', '李惠婷', '謝明樺', '吳翌禎', '陳彥京', '李鴻仁', '連培榮', '張道行', '鄭振宗', '黃俊文', '鄭乃仁', '黃海深', '吳志康', '易政男', '王珉玟', '林建瑋', '楊雅玲', '王玉如', '吳汶瑾', '黃\ue09b蔚', '安富睿', '李茂順', '羅正忠', '魏文欽', '沈文華', '黃志成', '張致遠', '潘淑玲', '楠原江美', '李昌年', '王璧寰', '劉修祥', '卓胡誼', '謝貴文', '楊慶煜', '劉世崑', '黃俊真', '葉日富', '丁孝明', '艾和昌', '蔡立仁', '董玉娟', '尚琬娟', '劉季貞', '林萍珍', '王燦\ue09f', '王心德', '宋靜宜', '陳秀惠', '王陳肇', '黃立政', '何宇明', '黃華志', '吳家德', '黃世疇', '李彗綾', '徐淑芳', '葉國隆', '洪麟', '伏和中', '彭生富', '許文政', '王和源', '李敏忠', '張國明', '陳柏青', '林武震', '張朝誠', '陳惜寒', '高秀芬', '林國欽', '林豐吉', '程深', '陳昭先', '許慶煌', '郝敏忠', '何國賢', '許光城', '黃勇中', '李仁鳳', '陳宣而', '卓錦江', '鄭揚熙', '賴盟騏', '王裕仁', '謝仁宗', '徐錦成', '邱魏頌正', '劉嘉裕', '許墩貴', '黃河銓', '梁廷宇', '陳忠男', '吳茂松', '吳政仲', '許秀暖', '廖惠娟', '吳佳華', '黃瓊慧（共同科目老師）', '魏春娥', '黃素芬', '鐘珮煖', '許琬甄', '唐綺霞', '王振欽', '曾世雄', '何春乾', '廖斌毅', '張志鋒', '羅木松', '鍾邦友', '李合龍', '蔡宗廷', '陳弘穎', '楊錦杯', '龔盟裕', '程言信', '許朝瑛', '丁旭輝', '鄭憲成', '吳曜東', '許進忠', '林原誌', '李明聰', '丁建文', '丁信文', '廖俊忠', '曾淑鳳', '王姿英', '林秋菊', '曾貝莉', '留淑芳', '楊國和', '陳明山', '李正雄', '林榮顯', '呂德慶', '羅斌賢', '林清和', '莊文典', '王嘉男', '李威龍', '黃銘賢', '吳明禮', '姜林杰祐', '黃宇璋', '劉昭恕', '郭仲文', '王明啟', '周宏亮', '陳聰安', '蔡政賢', '柯伯昇', '李政峯', '謝嘉聲', '蕭仕偉', '陳映潔', '王昭文', '侯乃文', '蘇谷芬', '林雅芬', '李正慧', '林美秀', '許春滿', '林蓓君', '陳巧幸', '謝佳穎', '許燦輝', '鐘國家', '林崑山', '蘇琨祥', '王明元', '林英志', '黃文良', '楊勝安', '杜建衡', '王天津', '劉定銘', '沈茂松', '沈茂田', '張雲龍', '林威成', '向振良', '陳盟仁', '李宗恩', '賴榮哲', '黃鐘慶', '林銘哲', '邱建良', '陳寶源', '葉育銘', '蔡明典', '晁成虎', '林明宏', '王崇昱', '林俊宏', '陳信宏', '何宗漢', '陳華明', '郭文田', '李順晴', '曾清桂', '賴俊如', '康耀鴻', '李穎杰', '張國林', '江金隆', '盧正壽', '陳文生', '鄭良安', '羅志賢', '劉志益', '許若書', '林韋体', '黃瑞展', '姚名鴻', '李龍淵', '謝宗翰', '劉炳宏', '林育秀', '韋鈺琪', '林憶芳', '顏雅雪', '謝宛庭', '汪青萍', '林杏鴻', '徐淑珍', '李慶祥', '宋明山', '林士奇', '黃士滔', '陳茂全', '陳文忠', '歐陽文忠', '陳忠信', '周定', '呂漢忠', '林良志', '郭中堅', '陳財源', '薛福財', '蔡漢鐘', '黃德福', '陳順隆', '鄭文魁', '陳振隆', '黃能冠', '邱武耀', '詹舜宇', '謝世峰', '李吉峯', '黃俊欽', '鄭平守', '謝廣漢', '翁孝文', '李偉仁', '呂文華', '趙國建', '黃忠發', '鄭建民', '張榮泰', '黃枝興', '葉宜鑫', '黃福鎮', '黃俊維', '陳文賢', '陳文平', '黃敏雄', '柯博昌', '毛國輝', '黃天受', '黃士人', '許兆民', '黃國忠', '黃昆明', '汪維揚', '謝致明', '鄭鴻君', '余銘忠', '謝欽旭', '王子安', '姚創文', '陳安琳', '楊正宏', '潘坤宗', '鐘志明', '鄭賢仁', '陳昆助', '洪克倫', '吳仁評', '林振勇', '鄭俊隆', '陳培銘', '林國清', '陳聰毅', '劉建源', '李建興', '張存炳', '許琦', '蔡文彥', '簡祐澤', '柯國民', '黃豪臣', '劉守恒', '江家慶', '宋柏宣', '劉健群', '許瓏勳', '張瑞芳', '李翠花', '歐雪貞', '管國珍', '王信心', '戴秀倫', '黃淑玲', '謝立瑤', '錢筱蓉', '吳淑敏', '林香君', '李佩芬', '楊美玲', '許美惠', '戴碧燕', '鄭婷勻', '鍾秀珠', '林昭君', '張嘉惠', '文雅亭', '詹喆君', '洪薇茹', '蘇德仁', '李國均', '黃俊隆', '邱錫榮', '張光明', '蔡秉旂', '陳文泰', '陳偉晃', '劉新在', '洪觀英', '吳坤平', '許寶東', '李良輝', '陳鵬光', '施天從', '賴順德', '徐毓隆', '陳俊良', '沈永年', '林世凌', '林桐銘', '吳炫東', '洪冠明', '郭孟寬', '左宗宏', '余智光', '李世堅', '李聿偉', '王來旺', '彭國光', '邱明志', '鍾豐洸', '趙晋榆', '楊光庭', '陳魁元', '羅孟彥', '陳明堂', '洪明爵', '陳榮彬', '徐金城', '陳必碩', '楊明利', '李昇家', '劉光台', '柯碧蘭', '翁佳萍', '郝逸華', '鄭淑甘', '林淑君', '羅雅芬', '趙學瑾', '葉惠忠', '莊燕玉', '陳洳瑾', '孫健萍', '林宗曾', '廖樹桐', '王湧泉', '唐惠欽', '楊素華', '李曉青', '林谷鴻', '金少凱', '陳丁立', '李國榮', '陳高府', '呂振文', '洪世力', '秦月貞', '許淑寬', '陳芃婷', '趙為克', '黃永祥', '郭天生'];
+  $("#realtxt").autocomplete(data, {matchContains: true});
+  });
+</script>
+
 </body></html>
 <script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
 <script>
