--- a/templates/query_teacher.html
+++ b/templates/query_teacher.html
@@ -1,10 +1,10 @@
-
-<!-- saved from url=(0047)http://140.127.113.231/kuas/ag_pro/ag302_01.jsp -->
-<html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <link href="../static/bootstrap.css" rel="stylesheet" media="screen">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <title></title>
 
@@ -23,27 +23,6 @@
 
   </style>
 <body class="sbody" oncontextmenu="of_setcontextmenu()">
-<SCRIPT type="text/javascript">
-function searchSel() {
-  var input=document.getElementById('realtxt').value;
-  var output=document.getElementById('class_id').options;
-  // console.log(output);
-  for(var i=0;i<output.length;i++) {
-    if(output[i].innerText.indexOf(input)!=-1){
-      output[i].selected="selected";
-    }
-    if(document.getElementById('realtxt').value==''){
-      output[0].selected="selected";
-    }
-  }
-}
-</SCRIPT>
-
-
-
-
-
-
 
 <td colspan="5"><center><font size="5">教師課表查詢</font></center></td></tr>
 <form name="thisform" action="query" method="post"><table align="center"><tbody><tr>
@@ -797,7 +776,6 @@ function searchSel() {
 
 <div class='result'></div>
 </body></html>
-<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
 <script>
   $("#search").click(function(){
     $.post("/ap/query_Teacher",
@@ -838,3 +816,27 @@ function searchSel() {
            }, 'json');
   })
 </script>
+<SCRIPT type="text/javascript">
+var t = []
+var temp = document.getElementById('Teacher_Number').getElementsByTagName('option');
+for(i=0;i<temp.length;i++){
+  t.push(temp[i]);
+}
+temp = t;
+
+function searchSel() {
+  $( "#realtxt" ).autocomplete({
+  source: temp
+  });
+  var input=document.getElementById('realtxt').value;
+  $("#Teacher_Number").children().remove();
+  for(var i=0;i<temp.length;i++) {
+    if(temp[i].text.indexOf(input)!=-1){
+      $("#Teacher_Number").append(temp[i]);
+    }
+    if(document.getElementById('realtxt').value==''){
+      $("#Teacher_Number").append(temp[i]);
+    }
+  }
+}
+</SCRIPT>
