Revert "Fix Cannot correctly display Teachers Name"
This reverts commit 21289f994191ba0bcdb3f1918a04eefb9ff20ce5.

--- a/templates/query_teacher.html
+++ b/templates/query_teacher.html
@@ -845,6 +845,18 @@ function searchSel() {
         for(var i = 0; i < tname.length; i++)
             $("#Teacher_Number").append(new Option(tname[i], tnumb[i]));
     }
-
+    
+/**
+  for(var i = 0; i < t.length; i++) 
+  {
+    if(t[i].indexOf(input)!=-1)
+    {
+      $("#Teacher_Number").append([i]);
+    }
+    if(document.getElementById('realtxt').value==''){
+      $("#Teacher_Number").append(temp[i]);
+    }
+  }
+**/
 }
 </SCRIPT>
