Fix api Uppercase problem

--- a/templates/query_teacher.html
+++ b/templates/query_teacher.html
@@ -780,7 +780,7 @@
 </body></html>
 <script>
   $("#search").click(function(){
-    $.post("/ap/query_Teacher",
+    $.post("/ap/query_teacher",
            {
             'Teacher_Number': $("#Teacher_Number").val(),
             'yms_yms': $("#yms_yms").val(),
