Fix query api Uppercase problem

--- a/templates/query_class.html
+++ b/templates/query_class.html
@@ -718,7 +718,7 @@
 </body></html>
 <script>
   $("#search").click(function(){
-    $.post("/ap/query_class",
+    $.post("/ap/query/class",
            {
             'class_id': $("#class_id").val(),
             'yms_yms': $("#yms_yms").val(),
